fix distribution bug on mobile

--- a/public/assets/styles/mobile.css
+++ b/public/assets/styles/mobile.css
@@ -309,6 +309,14 @@
 
 }
 
+@media only screen and (max-width: 550px){
+
+    .distributionContainer .stats{
+        grid-template-columns: 1fr;
+    }
+
+}
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
 
